--- a/new.html
+++ b/new.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <p>Done it</p>
-</head>
-<body>
     
+<body>
+    <p>This is main branch</p>
+    <p>This is master branch</p>
+</head>
 </body>
 </html>
